<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/user_profiles">
    <fragment
        android:id="@+id/user_profiles"
        android:name="com.guzzardi.profileslist.view.fragments.ProfilesListFragment"
        android:label="@string/fragment_profiles_list_title"
        tools:layout="@layout/fragment_profiles_list">
        <action
            android:id="@+id/action_user_profiles_to_create_profile"
            app:destination="@id/create_profile" />
        <action
            android:id="@+id/action_user_profiles_to_edit_profile"
            app:destination="@id/edit_profile" />
    </fragment>

    <fragment
        android:id="@+id/create_profile"
        android:name="com.guzzardi.profileslist.view.fragments.CreateProfileFragment"
        android:label="@string/fragment_create_profile_title"
        tools:layout="@layout/fragment_create_profile" />

    <fragment
        android:id="@+id/edit_profile"
        android:name="com.guzzardi.profileslist.view.fragments.EditProfileFragment"
        android:label="@string/fragment_edit_profile_title"
        tools:layout="@layout/fragment_edit_profile">
        <argument
            android:name="profile_index"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
</navigation>